# AzerAI

./: LICENSE  PLUGIN_GUIDE.md  README.md  pyproject.toml
azerai/: __init__.py  auto_run.py  azerai.py  cli.py  info.py  memory.py  prompts.py
azerai/plugins/: __init__.py
